force-app/main/default/objects/Online_Process_Config__mdt/Online_Process_Config__mdt.object-meta.xml
<CustomObject>
    <description>This custom metadata is use for to configure the display filter and fields of online process</description>
    <label>Online Process Config</label>
    <pluralLabel>Online Process Configs</pluralLabel>
</CustomObject>