force-app/main/default/objects/Online_Process_Config__mdt/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <label>Section</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contact Address Details</fullName>
            </value>
            <value>
                <fullName>Contact Details</fullName>
            </value>
            <value>
                <fullName>Course Filter</fullName>
                <default>true</default>
                <label>Course Filter</label>
            </value>
            <value>
                <fullName>Enrollment Details</fullName>
            </value>
            <value>
                <fullName>Student Details</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>