force-app/main/default/objects/Online_Process_Config__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>It will define that, purpose of this data.Is it will use on filter for course or is it will use for show on enrollment processes</description>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Filter</fullName>
                <default>true</default>
                <label>Filter</label>
            </value>
            <value>
                <fullName>Visible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>