force-app/main/default/objects/Online_Process_Config__mdt/listViews/Contact_Details.listView-meta.xml
<ListView>
    <fullName>Contact_Details</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Description__c</columns>
    <columns>Field_Api_Name__c</columns>
    <columns>Section__c</columns>
    <columns>Type__c</columns>
    <columns>Sequence__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Section__c</field>
        <operation>equals</operation>
        <value>Contact Details</value>
    </filters>
    <label>Contact Details</label>
</ListView>