force-app/main/default/objects/Online_Process_Config__mdt/listViews/Course_filter.listView-meta.xml
<ListView>
    <fullName>Course_filter</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Field_Api_Name__c</columns>
    <columns>Type__c</columns>
    <columns>Active__c</columns>
    <columns>Section__c</columns>
    <columns>Sequence__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Section__c</field>
        <operation>equals</operation>
        <value>Course Filter</value>
    </filters>
    <label>Course filter</label>
</ListView>